--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,8 +12,19 @@ jobs:
     runs-on: ubuntu-latest  
     steps:
       - run: echo "Hello"
-- name: Upload resulting Build package
-  uses: actions/upload-artifact@v4
-  with:
-    name: Package
-    path: backend/target
+  services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_DB: measdb
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432    
+
+      
